--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
+    "pdfkit": "^0.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
