--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "node-mocks-http": "^1.14.0",
+    "pdfkit": "^0.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
